--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "url": "git+https://github.com/leerob/leerob.io.git"
   },
   "scripts": {
+    "build:tailwind": "tailwindcss build src/tailwind.css -o src/tailwind.output.css",
+    "prestart": "npm run build:tailwind",
+    "prebuild": "npm run build:tailwind",
     "build": "next build",
     "dev": "next",
     "lint": "eslint . --ext .json --ext .js",
@@ -74,7 +77,9 @@
     "globby": "11.0.0",
     "husky": "4.2.3",
     "lint-staged": "10.1.2",
+    "postcss-preset-env": "^6.7.0",
     "prettier": "2.0.5",
-    "rehype": "10.0.0"
+    "rehype": "10.0.0",
+    "tailwindcss": "^1.7.6"
   }
 }
