--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@chakra-ui/core": "0.8.0",
     "@emotion/core": "10.0.28",
     "@emotion/styled": "10.0.27",
+    "@fullhuman/postcss-purgecss": "^2.3.0",
     "@mapbox/rehype-prism": "0.4.0",
     "@mdx-js/loader": "1.5.8",
     "@mdx-js/react": "1.5.8",
