--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "postinstall-postinstall": "2.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-icons": "^3.11.0",
     "react-tweet-embed": "1.2.2",
     "reading-time": "1.2.0",
     "remark-autolink-headings": "6.0.0",
