--- a/vercel.json
+++ b/vercel.json
@@ -50,6 +50,14 @@
           "value": "accelerometer 'none'; ambient-light-sensor 'none'; autoplay 'none'; battery 'none'; camera 'none'; display-capture 'none'; document-domain 'none'; encrypted-media 'none'; fullscreen 'none'; execution-while-not-rendered 'none'; execution-while-out-of-viewport 'none'; gyroscope 'none'; magnetometer 'none'; microphone 'none'; midi 'none'; navigation-override 'none'; payment 'none'; picture-in-picture 'none'; sync-xhr 'none'; usb 'none'; wake-lock 'none';"
         },
         {
+          "key": "Permissions-Policy",
+          "value": "geolocation=(self \"https://example.com\"); microphone=()"
+        },
+        {
+          "key": "Content-Security-Policy",
+          "value": "default-src; lukepierce.dev"
+        },
+        {
           "key": "Expect-CT",
           "value": "max-age=86400, enforce, report-uri=/"
         }
