Not loading assets correctly still

--- a/vercel.json
+++ b/vercel.json
@@ -51,7 +51,7 @@
         },
         {
           "key": "Content-Security-Policy",
-          "value": "default-src; https:"
+          "value": "default-src https:"
         },
         {
           "key": "Expect-CT",
