--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "leerob.io",
-  "description": "My personal website.",
+  "name": "lukepierce.dev",
+  "description": "Luke Pierce Personal Portfolio & Blog",
   "version": "0.0.0",
   "author": {
-    "name": "Lee Robinson",
-    "email": "me@leerob.io",
-    "url": "https://leerob.io"
+    "name": "Luke Pierce",
+    "email": "lpierce1313@gmail.com",
+    "url": "https://lukepierce.dev"
   },
-  "license": "MIT",
+  "license": "UNLICENSED",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/leerob/leerob.io.git"
+    "url": "git+https://github.com/lpierce1313/lukepierce_dev.git"
   },
   "scripts": {
     "build": "next build",
