--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lukepierce.dev",
   "description": "Luke Pierce Personal Portfolio & Blog",
-  "version": "0.0.0",
+  "version": "0.2.0",
   "author": {
     "name": "Luke Pierce",
     "email": "lpierce1313@gmail.com",
@@ -60,6 +60,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.11.0",
+    "react-spring": "^8.0.27",
     "react-tweet-embed": "1.2.2",
     "reading-time": "1.2.0",
     "remark-autolink-headings": "6.0.0",
@@ -67,6 +68,7 @@
     "remark-code-titles": "0.1.1",
     "remark-slug": "6.0.0",
     "swr": "0.2.0",
+    "typed.js": "2.0.11",
     "unsplash-js": "6.0.0"
   },
   "devDependencies": {
