Customize constant use and clean up work

--- a/package.json
+++ b/package.json
@@ -49,7 +49,6 @@
     "firebase": "7.14.4",
     "firebase-admin": "8.12.1",
     "googleapis": "48.0.0",
-    "iframe-resizer-react": "1.0.4",
     "mdx-prism": "0.3.1",
     "next": "9.4.1",
     "next-google-fonts": "1.1.0",
@@ -57,10 +56,10 @@
     "next-seo": "4.5.0",
     "patch-package": "6.2.2",
     "postinstall-postinstall": "2.1.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-icons": "^3.11.0",
-    "react-spring": "^8.0.27",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-icons": "3.11.0",
+    "react-spring": "8.0.27",
     "react-tweet-embed": "1.2.2",
     "reading-time": "1.2.0",
     "remark-autolink-headings": "6.0.0",
