--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "patch-package": "6.2.2",
     "postinstall-postinstall": "2.1.0",
     "react": "16.13.1",
+    "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "16.13.1",
     "react-icons": "3.11.0",
     "react-spring": "8.0.27",
