--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     ]
   },
   "dependencies": {
+    "@amcharts/amcharts4": "^4.10.7",
+    "@amcharts/amcharts4-geodata": "^4.1.17",
     "@chakra-ui/core": "0.8.0",
     "@emotion/core": "10.0.28",
     "@emotion/styled": "10.0.27",
@@ -60,6 +62,7 @@
     "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "16.13.1",
     "react-icons": "3.11.0",
+    "react-loading-skeleton": "^2.1.1",
     "react-spring": "8.0.27",
     "react-tweet-embed": "1.2.2",
     "reading-time": "1.2.0",
