--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "firebase": "7.14.4",
     "firebase-admin": "8.12.1",
     "googleapis": "48.0.0",
+    "gsap": "^3.5.1",
     "mdx-prism": "0.3.1",
     "next": "9.4.1",
     "next-google-fonts": "1.1.0",
