--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     ]
   },
   "dependencies": {
-    "@amcharts/amcharts4": "^4.10.7",
-    "@amcharts/amcharts4-geodata": "^4.1.17",
+    "@amcharts/amcharts4": "4.10.7",
+    "@amcharts/amcharts4-geodata": "4.1.17",
     "@chakra-ui/core": "0.8.0",
     "@emotion/core": "10.0.28",
     "@emotion/styled": "10.0.27",
@@ -51,7 +51,7 @@
     "firebase": "7.14.4",
     "firebase-admin": "8.12.1",
     "googleapis": "48.0.0",
-    "gsap": "^3.5.1",
+    "gsap": "3.5.1",
     "mdx-prism": "0.3.1",
     "next": "9.4.1",
     "next-google-fonts": "1.1.0",
@@ -60,11 +60,11 @@
     "patch-package": "6.2.2",
     "postinstall-postinstall": "2.1.0",
     "react": "16.13.1",
-    "react-copy-to-clipboard": "^5.0.2",
-    "react-device-detect": "^1.14.0",
+    "react-copy-to-clipboard": "5.0.2",
+    "react-device-detect": "1.14.0",
     "react-dom": "16.13.1",
     "react-icons": "3.11.0",
-    "react-loading-skeleton": "^2.1.1",
+    "react-loading-skeleton": "2.1.1",
     "react-spring": "8.0.27",
     "react-tweet-embed": "1.2.2",
     "reading-time": "1.2.0",
