Finished email dropdown resume docx etc

--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "postinstall-postinstall": "2.1.0",
     "react": "16.13.1",
     "react-copy-to-clipboard": "5.0.2",
-    "react-device-detect": "1.14.0",
+    "react-device-detect": "^1.14.0",
     "react-dom": "16.13.1",
     "react-icons": "3.11.0",
     "react-loading-skeleton": "2.1.1",
